--- a/package.json
+++ b/package.json
@@ -9,14 +9,38 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.0",
+    "@emotion/server": "^11.10.0",
+    "@mantine/core": "^5.2.0",
+    "@mantine/ds": "^5.2.3",
+    "@mantine/form": "^5.2.0",
+    "@mantine/hooks": "^5.2.0",
+    "@mantine/next": "^5.2.0",
+    "@mantine/notifications": "^5.2.0",
+    "@next-auth/prisma-adapter": "^1.0.4",
+    "@prisma/client": "^4.2.1",
+    "@tabler/icons": "^1.84.0",
+    "apollo-server-micro": "^3.10.2",
+    "cookies-next": "^2.1.1",
+    "graphql": "^16.6.0",
+    "micro": "^9.4.1",
+    "micro-cors": "^0.1.1",
     "next": "12.2.5",
+    "next-auth": "^4.10.3",
+    "nexus": "^1.3.0",
+    "nodemailer": "^6.7.8",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "stripe": "^10.3.0",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
+    "@types/cypress": "^1.1.3",
+    "@types/micro-cors": "^0.1.2",
     "@types/node": "18.7.10",
     "@types/react": "18.0.17",
     "@types/react-dom": "18.0.6",
+    "cypress": "^10.7.0",
     "eslint": "8.22.0",
     "eslint-config-next": "12.2.5",
     "typescript": "4.7.4"
